ready to release v1.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "non-repudiation-protocol",
-  "version": "1.0.0",
+  "version": "0.9.9",
   "description": "Library for the i3-market non-repudiation protocol that helps generate/verifying the necessary proofs and the received block of data",
   "keywords": [
     "non-repudiation",
@@ -50,7 +50,7 @@
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
     "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "version": "run-s build git:add",
+    "version": "run-s build release git:add",
     "postversion": "git push --follow-tags",
     "test": "run-s test:browser-headless test:node",
     "test:browser": "node build/testing/browser/index.js",
@@ -58,7 +58,7 @@
     "test:node": "npm run mocha -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "release": "npm pack --pack-destination releases/",
-    "postrelease": "rm ./releases/latest.tgz && ln -s ./$npm_package_name-$npm_package_version.tgz releases/latest.tgz"
+    "postrelease": "rm ./releases/latest.tgz && ln -s ./$npm_package_name-$npm_package_version.tgz releases/$npm_package_name-latest.tgz"
   },
   "ts-standard": {
     "env": [
