--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "non-repudiation-protocol",
+  "name": "@i3m/non-repudiation-protocol",
   "version": "1.0.0",
   "description": "Library for the i3-market non-repudiation protocol that helps generate/verifying the necessary proofs and the received block of data",
   "keywords": [
@@ -16,7 +16,10 @@
     "i3-MARKET"
   ],
   "license": "EUPL-1.2",
-  "repository": "gitlab:i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-protocol",
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-protocol.git"
+  },
   "types": "./types/index.d.ts",
   "main": "./dist/cjs/index.node.cjs",
   "browser": "./dist/esm/index.browser.js",
@@ -35,11 +38,8 @@
     "./types": "./types/index.d.ts"
   },
   "directories": {
-    "build": "./build",
-    "dist": "./dist",
-    "docs": "./docs",
-    "src": "./src",
-    "test": "./test"
+    "doc": "docs",
+    "test": "test"
   },
   "scripts": {
     "build": "run-s lint build:js docs test:browser-headless coverage",
@@ -118,5 +118,10 @@
     "ethers": "^5.5.2",
     "jose": "^4.3.7",
     "object-sha": "^2.0.6"
-  }
+  },
+  "bugs": {
+    "url": "https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-protocol/issues"
+  },
+  "homepage": "https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-protocol#readme",
+  "author": ""
 }
