--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i3m/non-repudiation-protocol",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Library for the i3-market non-repudiation protocol that helps generate/verifying the necessary proofs and the received block of data",
   "keywords": [
     "non-repudiation",
@@ -70,7 +70,7 @@
     "test:node": "npm run mocha -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "release": "npm pack --pack-destination releases/",
-    "postrelease": "rm -f ./releases/latest.tgz && ln -s ./$npm_package_name-$npm_package_version.tgz releases/$npm_package_name-latest.tgz"
+    "postrelease": "rm -f ./releases/i3m-non-repudiation-protocol-latest.tgz && cp ./releases/i3m-non-repudiation-protocol-$npm_package_version.tgz ./releases/i3m-non-repudiation-protocol-latest.tgz"
   },
   "ts-standard": {
     "env": [
