--- a/packages/wallet-protocol/package.json
+++ b/packages/wallet-protocol/package.json
@@ -45,13 +45,15 @@
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
     "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "version": "run-s build git:add",
+    "version": "run-s build release git:add",
     "postversion": "git push --follow-tags",
     "test": "run-s test:browser-headless test:node",
     "test:browser": "node build/testing/browser/index.js",
     "test:browser-headless": "node build/testing/browser/index.js headless",
     "test:node": "npm run mocha -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
-    "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'"
+    "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
+    "release": "npm pack --pack-destination releases/",
+    "postrelease": "rm -f ./releases/i3-market-wallet-protocol-latest.tgz && cp ./releases/i3-market-wallet-protocol-$npm_package_version.tgz ./releases/i3-market-wallet-protocol-latest.tgz"
   },
   "ts-standard": {
     "env": [
