--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,12 +16,26 @@ variables:
 #   script:
 #     - npm i
 
+build:
+  stage: build
+  image: node:$NODE_VERSION
+  script:
+    - cd packages/wallet-protocol
+    - npm ci
+    - npm run build:js
+    - npm run docs
+    - npm publish
+
+  rules:
+    - if: $CI_COMMIT_TAG != null
+
+## Wallet desktop
 build_mac:
   stage: build
   tags:
     - "macos"
   script:
-    - npm i --unsafe-perm
+    - npm ci --unsafe-perm
     - npm run pack:mac
   artifacts:
     paths:
@@ -34,7 +48,7 @@ build_lin:
   image:
     name: node:14.16.0
   script:
-    - npm i --unsafe-perm
+    - npm ci --unsafe-perm
     - npm run pack:lin
   artifacts:
     paths:
