--- a/packages/wallet-cli/package.json
+++ b/packages/wallet-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@i3-market/wallet-cli",
+  "name": "@i3m/wallet-cli",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,7 +15,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@i3-market/wallet-protocol": "^1.0.0",
+    "@i3m/wallet-protocol": "^1.0.0",
     "base58-js": "^1.0.0"
   }
 }
