--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -77,7 +77,7 @@
     "@i3-market/bok-wallet": "^1.0.0",
     "@i3-market/sw-wallet": "^1.0.0",
     "@i3-market/wallet-desktop-openapi": "^1.0.0",
-    "@i3-market/wallet-protocol": "^1.0.0",
+    "@i3m/wallet-protocol": "^1.0.0",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
     "electron-store": "^7.0.3",
