--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "@i3m/non-repudiation-protocol",
-  "version": "1.2.0",
+  "name": "@i3m/non-repudiation-library",
+  "version": "0.10.0",
   "description": "Library for the i3-market non-repudiation protocol that helps generate/verifying the necessary proofs and the received block of data",
   "keywords": [
     "non-repudiation",
-    "non-repudiation protocol",
+    "non-repudiation library",
+    "conflict resolution",
+    "conflict resolver service",
+    "crs",
     "proof of origin",
     "poo",
     "proof of reception",
@@ -18,12 +21,12 @@
   "license": "EUPL-1.2",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-protocol.git"
+    "url": "git+https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-library.git"
   },
   "bugs": {
-    "url": "https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-protocol/issues"
+    "url": "https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-library/issues"
   },
-  "homepage": "https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-protocol#readme",
+  "homepage": "https://gitlab.com/i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-library#readme",
   "author": {
     "name": "Juan Hernández Serrano",
     "email": "j.hernandez@upc.edu",
@@ -70,7 +73,7 @@
     "test:node": "npm run mocha -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "release": "npm pack --pack-destination releases/",
-    "postrelease": "rm -f ./releases/i3m-non-repudiation-protocol-latest.tgz && cp ./releases/i3m-non-repudiation-protocol-$npm_package_version.tgz ./releases/i3m-non-repudiation-protocol-latest.tgz"
+    "postrelease": "rm -f ./releases/i3m-non-repudiation-library-latest.tgz && cp ./releases/i3m-non-repudiation-library-$npm_package_version.tgz ./releases/i3m-non-repudiation-library-latest.tgz"
   },
   "ts-standard": {
     "env": [
@@ -94,7 +97,7 @@
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.2.22",
@@ -112,7 +115,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pirates": "^4.0.1",
-    "puppeteer": "^12.0.1",
+    "puppeteer": "^13.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.57.0",
     "rollup-plugin-terser": "^7.0.2",
