--- a/packages/wallet-desktop-openapi/src/paths/identities.yaml
+++ b/packages/wallet-desktop-openapi/src/paths/identities.yaml
@@ -7,7 +7,7 @@ info:
 paths:
   /identities/{did}/sign:
     post:
-      summary: Gets an identity selected by the user.
+      summary: Signs a message
       operationId: identitySign
       x-eov-operation-handler: identities
       tags:
@@ -27,11 +27,61 @@ paths:
               $ref: "#/components/schemas/SignInput"
       responses:
         "200":
-          description: Selected identity
+          description: Signed data
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/SignOutput"
+
+  /identities/{did}/deploy-tx:
+    post:
+      summary: Signs and deploys a transaction
+      operationId: identityDeployTransaction
+      x-eov-operation-handler: identities
+      tags:
+        - identities
+      parameters:
+        - in: path
+          name: did
+          schema:
+            $ref: "../schema/identity.yaml#/components/schemas/did"
+          required: true
+      requestBody:
+        description: Transaction to sign and deploy
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Transaction"
+      responses:
+        "200":
+          description: Selected identity
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Receipt"
+
+  /identities/{did}/info:
+    get:
+      summary: Gets extra information of an identity.
+      operationId: identityInfo
+      x-eov-operation-handler: identities
+      tags:
+        - identities
+      parameters:
+        - in: path
+          name: did
+          schema:
+            $ref: "../schema/identity.yaml#/components/schemas/did"
+          required: true
+      responses:
+        "200":
+          description: Identity data
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: true
 
   /identities/select:
     get:
@@ -123,6 +173,25 @@ components:
       title: SignInput
       oneOf:
         - $ref: '#/components/schemas/SignTransaction'
+        - $ref: '#/components/schemas/SignRaw'
+
+    SignRaw:
+      title: SignRaw
+      type: object
+      properties:
+        type:
+          $ref: '#/components/schemas/SignTypes'
+          enum:
+            - Raw
+        data:
+          type: object
+          properties:
+            payload:
+              description: Base64Url encoded data to sign
+              type: string
+              pattern: ^[A-Za-z0-9_-]+$
+          required:
+            - payload
 
     SignTransaction:
       title: SignTransaction
@@ -138,9 +207,14 @@ components:
     Transaction:
       title: Transaction
       type: object
+      additionalProperties: true
       properties:
         from:
           type: string
+        to:
+          type: string
+        nonce:
+          type: number
 
     SignOutput:
       title: SignOutput
@@ -151,11 +225,21 @@ components:
       required:
         - signature
 
+    Receipt:
+      title: Receipt
+      type: object
+      properties:
+        receipt:
+          type: string
+      required:
+        - receipt
+
     SignTypes:
       title: SignTypes
       type: string
       enum:
         - Transaction
+        - Raw
 
     IdentityListInput:
       title: IdentityListInput
