--- a/packages/base-wallet/package.json
+++ b/packages/base-wallet/package.json
@@ -30,7 +30,7 @@
     "@i3-market:registry": "https://gitlab.com/api/v4/projects/26002974/packages/npm/"
   },
   "author": "Juan Hernandez Serrano",
-  "license": "MIT",
+  "license": "EUPL-1.2",
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.168",
