--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -25,7 +25,7 @@
     "email": "fernando.roman@upc.edu"
   },
   "homepage": "https://entel.upc.edu/en/research/sertel",
-  "license": "ISC",
+  "license": "EUPL-1.2",
   "ts-standard": {
     "ignore": [
       "wallet-api"
@@ -61,7 +61,6 @@
     "fs-extra": "^9.1.0",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.7",
-    "rimraf": "^3.0.2",
     "rollup": "^2.39.1",
     "rollup-plugin-scss": "^3.0.0",
     "ts-node": "^9.1.1",
@@ -78,6 +77,7 @@
     "@i3-market/sw-wallet": "^1.0.1",
     "@i3m/wallet-desktop-openapi": "^1.0.1",
     "@i3m/wallet-protocol": "^1.0.1",
+    "rimraf": "^3.0.2",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
     "electron-store": "^7.0.3",
