--- a/packages/wallet-protocol-utils/package.json
+++ b/packages/wallet-protocol-utils/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@i3-market/wallet-protocol-utils",
   "version": "1.0.1",
-  "description": "",
+  "description": "Wallet protocol utilities",
   "main": "index.js",
   "scripts": {
     "build": "rollup -c build/rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Fernando Román García",
+  "license": "EUPL-1.2",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
