--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -16,7 +16,7 @@
     "pack:mac": "npm run clean:rel && electron-builder --mac -p never",
     "pack:win": "npm run clean:rel && electron-builder --win --x64 --arm64 --ia32 -p never -c.win.certificateSubjectName=\"i3-MARKET\"",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main",
+    "start": "electron ./dist/main",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -72,9 +72,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@i3-market/base-wallet": "^1.0.1",
-    "@i3-market/bok-wallet": "^1.0.1",
-    "@i3-market/sw-wallet": "^1.0.1",
+    "@i3m/base-wallet": "^1.0.1",
+    "@i3m/bok-wallet": "^1.0.1",
+    "@i3m/sw-wallet": "^1.0.1",
     "@i3m/wallet-desktop-openapi": "^1.0.1",
     "@i3m/wallet-protocol": "^1.0.1",
     "rimraf": "^3.0.2",
