--- a/packages/wallet-desktop-openapi/package.json
+++ b/packages/wallet-desktop-openapi/package.json
@@ -25,7 +25,7 @@
     "postversion": "run-s build commit"
   },
   "publishConfig": {
-    "@i3-market:registry": "https://gitlab.com/api/v4/projects/26002446/packages/npm/"
+    "@i3m:registry": "https://gitlab.com/api/v4/projects/26002446/packages/npm/"
   },
   "repository": {
     "type": "git",
