--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ build_mac:
     paths:
       - $RELEASE_ARTIFACT
   rules:
-    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_TAG != null
 
 build_lin:
   stage: build
@@ -55,7 +55,7 @@ build_lin:
       - $RELEASE_ARTIFACT  # rules:
   #   - if: $CI_COMMIT_BRANCH == "master" && $DEPLOY == "true"
   rules:
-    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_TAG != null
 
 deploy:
   stage: deploy
@@ -68,4 +68,4 @@ deploy:
   # rules:
   #   - if: $CI_COMMIT_BRANCH == "master" && $DEPLOY == "true"
   rules:
-    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_TAG != null
