--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,8 +41,8 @@ build_libraries:
 
   rules:
     - if: $CI_COMMIT_TAG != null
-    - if: $DEPLOY_ALL == true
-    - if: $DEPLOY_LIBRARIES == true
+    - if: $DEPLOY_ALL == "true"
+    - if: $DEPLOY_LIBRARIES == "true"
 
 # build_win:
 #   stage: build
