--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,8 @@ build_mac:
       - $RELEASE_ARTIFACT
   rules:
     - if: $CI_COMMIT_TAG != null
+    - if: $DEPLOY_ALL == "true"
+    - if: $DEPLOY_DESKTOP == "true"
 
 build_lin:
   stage: build
@@ -78,6 +80,8 @@ build_lin:
   #   - if: $CI_COMMIT_BRANCH == "master" && $DEPLOY == "true"
   rules:
     - if: $CI_COMMIT_TAG != null
+    - if: $DEPLOY_ALL == "true"
+    - if: $DEPLOY_DESKTOP == "true"
 
 deploy:
   stage: deploy
@@ -91,3 +95,5 @@ deploy:
   #   - if: $CI_COMMIT_BRANCH == "master" && $DEPLOY == "true"
   rules:
     - if: $CI_COMMIT_TAG != null
+    - if: $DEPLOY_ALL == "true"
+    - if: $DEPLOY_DESKTOP == "true"
