--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,14 +44,23 @@ build_libraries:
     - if: $DEPLOY_ALL == "true"
     - if: $DEPLOY_LIBRARIES == "true"
 
-# build_win:
-#   stage: build
-#   tags:
-#     - "windows"
-#   script:
-#     - npm i
-
 ## Wallet desktop
+build_win:
+  stage: build
+  tags:
+    - "windows"
+  script:
+    - npm i
+
+  artifacts:
+    paths:
+      - $RELEASE_ARTIFACT
+  rules:
+    - if: $CI_COMMIT_TAG != null
+    - if: $DEPLOY_ALL == "true"
+    - if: $DEPLOY_DESKTOP == "true"
+    - if: $DEPLOY_WIN == "true"
+
 build_mac:
   stage: build
   tags:
@@ -66,6 +75,7 @@ build_mac:
     - if: $CI_COMMIT_TAG != null
     - if: $DEPLOY_ALL == "true"
     - if: $DEPLOY_DESKTOP == "true"
+    - if: $DEPLOY_MAC == "true"
 
 build_lin:
   stage: build
@@ -82,6 +92,7 @@ build_lin:
     - if: $CI_COMMIT_TAG != null
     - if: $DEPLOY_ALL == "true"
     - if: $DEPLOY_DESKTOP == "true"
+    - if: $DEPLOY_WIN == "true"
 
 deploy:
   stage: deploy
@@ -97,3 +108,6 @@ deploy:
     - if: $CI_COMMIT_TAG != null
     - if: $DEPLOY_ALL == "true"
     - if: $DEPLOY_DESKTOP == "true"
+    - if: $DEPLOY_WIN == "true"
+    - if: $DEPLOY_MAC == "true"
+    - if: $DEPLOY_LIN == "true"
