--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,32 +12,7 @@ variables:
 build_libraries:
   stage: build
   image: node:$NODE_VERSION
-  script:
-    - npm ci
-
-    - pushd packages/wallet-protocol
-    - npm publish
-    - popd
-
-    - pushd packages/wallet-protocol-api
-    - npm publish
-    - popd
-
-    - pushd packages/wallet-protocol-utils
-    - npm publish
-    - popd
-
-    - pushd packages/base-wallet
-    - npm publish
-    - popd
-
-    - pushd packages/sw-wallet
-    - npm publish
-    - popd
-
-    - pushd packages/bok-wallet
-    - npm publish
-    - popd
+  script: ./scripts/libraries.sh
 
   rules:
     - if: $CI_COMMIT_TAG != null
