--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,8 @@ build_win:
   tags:
     - "windows"
   script:
-    - npm i
+    - npm ci --unsafe-perm
+    - npm run pack:win
 
   artifacts:
     paths:
@@ -61,8 +62,7 @@ build_lin:
     - npm run pack:lin
   artifacts:
     paths:
-      - $RELEASE_ARTIFACT  # rules:
-  #   - if: $CI_COMMIT_BRANCH == "master" && $DEPLOY == "true"
+      - $RELEASE_ARTIFACT
   rules:
     - if: $CI_COMMIT_TAG != null
     - if: $DEPLOY_ALL == "true"
@@ -73,12 +73,7 @@ deploy:
   stage: deploy
   image:
     name: peterevans/curl-jq
-  script:
-    - ./scripts/publish.sh
-  # script:
-  #   - 'curl --request POST --header "Authorization: Bearer $ANSIBLE_DEPLOY_TOKEN" "$URL_DEPLOY_AA"'
-  # rules:
-  #   - if: $CI_COMMIT_BRANCH == "master" && $DEPLOY == "true"
+  script: ./scripts/publish.sh
   rules:
     - if: $CI_COMMIT_TAG != null
     - if: $DEPLOY_ALL == "true"
