Electron build for windows

--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -14,7 +14,7 @@
     "pack:dir": "npm run clean:rel && electron-builder --dir -p never",
     "pack:lin": "npm run clean:rel && electron-builder --linux --x64 -p never",
     "pack:mac": "npm run clean:rel && electron-builder --mac -p never",
-    "pack:win": "npm run clean:rel && electron-builder --win --x64 --arm64 --ia32 -p never -c.win.certificateSubjectName=\"i3-MARKET\"",
+    "pack:win": "npm run clean:rel && electron-builder --win --x64 --arm64 --ia32 -p never",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "electron ./dist/main",
     "test": "echo \"Error: no test specified\" && exit 1"
