--- a/packages/wallet-desktop/electron-builder.yml
+++ b/packages/wallet-desktop/electron-builder.yml
@@ -13,6 +13,11 @@ mac:
   category: public.app-category.productivity
 
 # Windows configurations
+win:
+  target:
+    - zip
+    - nsis
+  artifactName: ${name}-${version}-${arch}.${ext}
 
 # Linux configurations
 linux:
