--- a/packages/wallet-protocol-utils/package.json
+++ b/packages/wallet-protocol-utils/package.json
@@ -4,7 +4,7 @@
   "description": "Wallet protocol utilities",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c build/rollup.config.js",
+    "build": "rollup -c ./build/rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
