Wallet protocol error management improved Added pairing UI on wallet-desktop

--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -77,7 +77,7 @@
     "@i3m/sw-wallet": "^1.0.1",
     "@i3m/wallet-desktop-openapi": "^1.0.1",
     "@i3m/wallet-protocol": "^1.0.1",
-    "rimraf": "^3.0.2",
+    "@i3m/wallet-protocol-utils": "^1.0.1",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
     "electron-store": "^7.0.3",
@@ -94,6 +94,7 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
