Toast animations and new toast messages

--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -50,6 +50,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-transition-group": "^4.4.4",
     "@types/rimraf": "^3.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
@@ -94,6 +95,7 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.2",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.6",
