--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
     "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "version": "run-s build test release git:add",
+    "version": "run-s release git:add",
     "postversion": "git push --follow-tags",
     "test": "run-s test:browser-headless test:node",
     "test:browser": "node build/testing/browser/index.js",
