--- a/.npmignore
+++ b/.npmignore
@@ -27,11 +27,18 @@ coverage
 # GitHub
 .github
 
+# GitLab
+.gitlab-ci.yml
+.gitlab-ci.yaml
+
 # tsconfig
 tsconfig.json
 
 # SRC docs
 src/docs
+
+# Environment files
+*.env
 
 # Test temporal files
 .mocha-ts
