--- a/package.json
+++ b/package.json
@@ -64,14 +64,17 @@
     "docs": "node build/build.docs.js",
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
-    "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "version": "run-s release git:add",
+    "mocha-ts:node": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
+    "mocha-ts:browser": "node build/testing/browser/index.js ",
+    "mocha-ts:browser-headless": "node build/testing/browser/index.js headless ",
+    "preversion": "run-s clean lint build:js coverage test:browser-headless",
+    "version": "run-s docs release git:add",
     "postversion": "git push --follow-tags",
     "test": "run-s test:browser-headless test:node",
-    "test:browser": "node build/testing/browser/index.js",
-    "test:browser-headless": "node build/testing/browser/index.js headless",
-    "test:node": "npm run mocha -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
-    "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
+    "test:browser": "npm run mocha-ts:browser ",
+    "test:browser-headless": "npm run mocha-ts:browser-headless ",
+    "test:node": "npm run mocha-ts:node -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
+    "watch": "npm run mocha-ts:node -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "release": "npm pack --pack-destination releases/",
     "postrelease": "rm -f ./releases/i3m-non-repudiation-library-latest.tgz && cp ./releases/i3m-non-repudiation-library-$npm_package_version.tgz ./releases/i3m-non-repudiation-library-latest.tgz"
   },
@@ -107,6 +110,7 @@
     "@types/node": "^16.11.11",
     "chai": "^4.3.3",
     "chai-as-promised": "^7.1.1",
+    "dotenv": "^16.0.0",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "json5": "^2.2.0",
