--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -1,10 +1,12 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: publish
 
 on:
   workflow_dispatch:
+
+env:
+  RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
+  ETHERS_WALLET_ADDRESS: ${{ secrets.ETHERS_WALLET_ADDRESS }}
+  ETHERS_WALLET_PRIVATE_KEY: ${{ secrets.ETHERS_WALLET_PRIVATE_KEY }}
 
 jobs:
   publication:
