--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -37,10 +37,10 @@ jobs:
       - name: node tests and coverage
         run: npm run coverage
       
-      - name: send report to coveralls.io
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: send report to coveralls.io
+      #   uses: coverallsapp/github-action@master
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: publish to NPM
         run: npm publish --access public
