--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -34,14 +34,9 @@ jobs:
       - name: browser tests
         run: npm run test:browser-headless
       
-      - name: node tests and coverage
-        run: npm run coverage
+      - name: node tests
+        run: npm run test:node
       
-      # - name: send report to coveralls.io
-      #   uses: coverallsapp/github-action@master
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: publish to NPM
         run: npm publish --access public
         env:
