--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,9 +2,7 @@ name: build
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ public ]
 
 env:
   RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
