--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "docs": "node build/build.docs.js",
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
-    "mocha-ts:node": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
+    "mocha-ts": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
     "mocha-ts:browser": "node build/testing/browser/index.js ",
     "mocha-ts:browser-headless": "node build/testing/browser/index.js headless ",
     "preversion": "run-s clean lint build:js coverage test:browser-headless",
@@ -73,8 +73,8 @@
     "test": "run-s test:browser-headless test:node",
     "test:browser": "npm run mocha-ts:browser ",
     "test:browser-headless": "npm run mocha-ts:browser-headless ",
-    "test:node": "npm run mocha-ts:node -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
-    "watch": "npm run mocha-ts:node -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
+    "test:node": "npm run mocha-ts -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
+    "watch": "npm run mocha-ts -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "release": "npm pack --pack-destination releases/",
     "postrelease": "rm -f ./releases/i3m-non-repudiation-library-latest.tgz && cp ./releases/i3m-non-repudiation-library-$npm_package_version.tgz ./releases/i3m-non-repudiation-library-latest.tgz"
   },
