--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,6 +17,8 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
         node-version: [14.x, 16.x, 18.x]
+      fail-fast: true
+      max-parallel: 1
     steps:
       - uses: actions/checkout@v2
 
