--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -9,15 +9,14 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-      fail-fast: true
-      max-parallel: 1
+        node-version: [14.17]
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
+          node-version: ${{ matrix.node-version }}
 
       - name: install
         run: npm ci
@@ -47,7 +46,6 @@ jobs:
 
       - name: Upload Release Asset
         if: matrix.os == 'ubuntu-latest'
-        id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -59,7 +57,6 @@ jobs:
 
       - name: Upload Release Asset
         if: matrix.os == 'ubuntu-latest'
-        id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -68,4 +65,3 @@ jobs:
           asset_path: ./packages/wallet-desktop/release/wallet-desktop-${{ github.ref }}-amd64.deb
           asset_name: wallet-desktop-${{ github.ref }}-amd64.deb
           asset_content_type: application/zip
-
