--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "run-s bootstrap build",
+    "init:dev": "run-s bootstrap build",
+    "install:libs": "lerna bootstrap --scope=\"@i3m/*\"",
+    "build:libs": "lerna run build --scope=\"@i3m/*\"",
+    "install:desktop": "lerna exec --scope \"wallet-desktop\" --no-bail -- npm ci",
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "build:watch": "lerna run --parallel --stream build:watch",
@@ -12,7 +15,7 @@
     "start": "lerna run --scope wallet-desktop start",
     "start:dev:desktop": "lerna run --stream start:dev",
     "start:dev": "run-p build:watch start:dev:desktop",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "lerna run test --parallel --stream",
     "publish:nexus": "dotenv -- ./scripts/publish.sh",
     "pack:lin": "lerna run --stream pack:lin",
     "pack:mac": "lerna run --stream pack:mac",
