--- a/packages/wallet-cli/package.json
+++ b/packages/wallet-cli/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node --files ./src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Warning: You must specify tests for this package\""
   },
   "keywords": [],
   "author": "Fernando Román García",
