--- a/packages/wallet-protocol-utils/package.json
+++ b/packages/wallet-protocol-utils/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c ./build/rollup.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Warning: You must specify tests for this package\""
   },
   "keywords": [],
   "author": "Fernando Román García",
