--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -18,8 +18,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: install
+      - name: Install root dependecies
         run: npm ci
+
+      - name: Install desktop dependecies
+        run: npm run install:desktop
+
+      - name: Build desktop
+        run: npm run build:desktop
 
       - name: build linux
         if: matrix.os == 'ubuntu-latest'
