--- a/packages/wallet-protocol/package.json
+++ b/packages/wallet-protocol/package.json
@@ -11,7 +11,7 @@
     "name": "Fernando Roman-Garcia",
     "email": "fernando.roman@upc.edu"
   },
-  "repository": "gitlab.com:i3-market/code/wp3/t3.2/i3m-wallet-monorepo",
+  "repository": "github.com:i3-Market-V2-Public-Repository/SP3-SCGBSSW-I3mWalletMonorepo",
   "types": "./types/index.d.ts",
   "main": "./dist/cjs/index.node.cjs",
   "browser": "./dist/esm/index.browser.js",
@@ -45,15 +45,12 @@
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
     "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "version": "run-s build release git:add",
-    "postversion": "git push --follow-tags",
+    "preversion": "run-s build test git:add",
     "test": "run-s test:browser-headless test:node",
     "test:browser": "node build/testing/browser/index.js",
     "test:browser-headless": "node build/testing/browser/index.js headless",
     "test:node": "npm run mocha -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
-    "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'",
-    "release": "npm pack --pack-destination releases/",
-    "postrelease": "rm -f ./releases/i3m-wallet-protocol-latest.tgz && cp ./releases/i3m-wallet-protocol-$npm_package_version.tgz ./releases/i3m-wallet-protocol-latest.tgz"
+    "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'"
   },
   "ts-standard": {
     "env": [
@@ -73,28 +70,27 @@
     ]
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
-    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.7",
     "chai": "^4.3.3",
     "fs-extra": "^10.0.0",
-    "glob": "^7.2.0",
+    "glob": "^8.0.1",
     "json5": "^2.2.0",
-    "minimatch": "^3.0.4",
+    "minimatch": "^5.0.1",
     "mocha": "^9.1.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pirates": "^4.0.1",
-    "puppeteer": "^11.0.0",
+    "puppeteer": "^13.6.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.57.0",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-standard": "^10.0.0",
+    "ts-standard": "^11.0.0",
     "tslib": "^2.3.1",
     "typedoc": "^0.22.0",
     "typedoc-plugin-markdown": "^3.11.0",
