--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -4,7 +4,29 @@ on:
   workflow_dispatch:
 
 jobs:
+  prepare:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Branch name
+        id: branch_name
+        run: |
+          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
+          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
+          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+
+      - name: create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+          release_name: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+          draft: true
+          prerelease: false
+
   publication:
+    needs: prepare
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -17,13 +39,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Branch name
-        id: branch_name
-        run: |
-          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
-          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
-          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
 
       - name: Install root dependecies
         run: npm ci
@@ -46,17 +61,6 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: npm run pack:mac
 
-      - name: create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.branch_name.outputs.SOURCE_TAG }}
-          release_name: ${{ steps.branch_name.outputs.SOURCE_TAG }}
-          draft: true
-          prerelease: false
-
       - name: Upload Release Asset
         if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-release-asset@v1
@@ -75,6 +79,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./packages/wallet-desktop/release/wallet-desktop-${{ github.ref }}-x86_64.AppImage
+          asset_path: ./packages/wallet-desktop/release/wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x86_64.AppImage
           asset_name: wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x86_64.AppImage
           asset_content_type: application/zip
