--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.os }}-artifact
+          name: artifact
           path: packages/wallet-desktop/release
 
   publish:
