Removed internal version scripts

--- a/packages/wallet-protocol-api/package.json
+++ b/packages/wallet-protocol-api/package.json
@@ -45,8 +45,8 @@
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
     "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "version": "run-s build git:add",
-    "postversion": "git push --follow-tags",
+    "version:old": "run-s build git:add",
+    "postversion:old": "git push --follow-tags",
     "test:interactive": "run-s test:browser-headless test:node",
     "test:browser": "node build/testing/browser/index.js",
     "test:browser-headless": "node build/testing/browser/index.js headless",
