--- a/packages/wallet-protocol/package.json
+++ b/packages/wallet-protocol/package.json
@@ -45,7 +45,7 @@
     "git:add": "git add -A",
     "lint": "ts-standard --fix",
     "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "preversion": "run-s build test git:add",
+    "preversion:old": "run-s build test git:add",
     "test": "run-s test:browser-headless test:node",
     "test:browser": "node build/testing/browser/index.js",
     "test:browser-headless": "node build/testing/browser/index.js headless",
