--- a/packages/wallet-desktop-openapi/package.json
+++ b/packages/wallet-desktop-openapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i3m/wallet-desktop-openapi",
-  "version": "1.1.2",
+  "version": "1.1.5",
   "description": "The API of the i3m-wallet desktop application",
   "main": "openapi.json",
   "exports": {
@@ -22,7 +22,7 @@
     "lint": "ts-standard --fix",
     "postbuild": "npm run lint",
     "prepublishOnly": "npm run build",
-    "postversion": "run-s build commit",
+    "postversion:old": "run-s build commit",
     "test": "echo \"Warning: You must specify tests for this package\""
   },
   "repository": {
