--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        node-version: [14.17]
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
 
