--- a/packages/wallet-protocol-utils/package.json
+++ b/packages/wallet-protocol-utils/package.json
@@ -2,7 +2,30 @@
   "name": "@i3m/wallet-protocol-utils",
   "version": "1.1.5",
   "description": "Wallet protocol utilities",
-  "main": "index.js",
+  "types": "./types/index.d.ts",
+  "main": "./dist/cjs/index.node.cjs",
+  "browser": "./dist/esm/index.browser.js",
+  "module": "./dist/esm/index.node.js",
+  "exports": {
+    ".": {
+      "node": {
+        "require": "./dist/cjs/index.node.cjs",
+        "import": "./dist/esm/index.node.js"
+      },
+      "default": "./dist/esm/index.browser.js"
+    },
+    "./esm-browser-bundle": "./dist/bundles/esm.min.js",
+    "./iife-browser-bundle": "./dist/bundles/iife.js",
+    "./umd-browser-bundle": "./dist/bundles/umd.js",
+    "./types": "./types/index.d.ts"
+  },
+  "directories": {
+    "build": "./build",
+    "dist": "./dist",
+    "docs": "./docs",
+    "src": "./src",
+    "test": "./test"
+  },
   "scripts": {
     "build": "rollup -c ./build/rollup.config.js",
     "test": "echo \"Warning: You must specify tests for this package\""
@@ -15,6 +38,8 @@
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
     "rollup": "^2.70.2",
+    "rollup-plugin-dts-bundle-generator": "^1.3.1",
+    "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.6.3"
   },
   "dependencies": {
