--- a/packages/wallet-protocol-utils/tsconfig.json
+++ b/packages/wallet-protocol-utils/tsconfig.json
@@ -10,7 +10,7 @@
       "inlineSourceMap": true,
       "strict": true,
       "declaration": true,
-      "declarationDir": "types",
+      "declarationDir": "./types",
       // "noImplicitAny": false, /* Raise error on expressions and declarations with an implied 'any' type. */
       // "strictNullChecks": true, /* Enable strict null checks. */
       // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
