--- a/packages/base-wallet/package.json
+++ b/packages/base-wallet/package.json
@@ -46,7 +46,7 @@
     ]
   },
   "dependencies": {
-    "@i3m/wallet-desktop-openapi": "^1.1.7",
+    "@i3m/wallet-desktop-openapi": "1.1.7",
     "@veramo/core": "^1.2.0",
     "@veramo/credential-w3c": "^1.2.0",
     "@veramo/did-jwt": "^1.2.0",
