--- a/packages/sw-wallet/package.json
+++ b/packages/sw-wallet/package.json
@@ -58,7 +58,7 @@
   "license": "EUPL-1.2",
   "dependencies": {
     "@ethersproject/hdnode": "^5.3.0",
-    "@i3m/base-wallet": "^1.1.7",
+    "@i3m/base-wallet": "1.1.7",
     "debug": "^4.3.1",
     "did-jwt": "^5.2.0",
     "ethers": "^5.3.0",
