--- a/packages/wallet-cli/package.json
+++ b/packages/wallet-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i3m/wallet-cli",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Wallet client",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@i3m/wallet-protocol": "^1.1.6",
+    "@i3m/wallet-protocol": "1.1.7",
     "base58-js": "^1.0.0"
   }
 }
