--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -73,12 +73,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@i3m/base-wallet": "^1.1.7",
-    "@i3m/bok-wallet": "^1.1.7",
-    "@i3m/sw-wallet": "^1.1.7",
-    "@i3m/wallet-desktop-openapi": "^1.1.7",
-    "@i3m/wallet-protocol": "^1.1.6",
-    "@i3m/wallet-protocol-utils": "^1.1.7",
+    "@i3m/base-wallet": "1.1.7",
+    "@i3m/bok-wallet": "1.1.7",
+    "@i3m/sw-wallet": "1.1.7",
+    "@i3m/wallet-desktop-openapi": "1.1.7",
+    "@i3m/wallet-protocol": "1.1.7",
+    "@i3m/wallet-protocol-utils": "1.1.7",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
     "electron-store": "^7.0.3",
