--- a/packages/wallet-protocol-utils/package.json
+++ b/packages/wallet-protocol-utils/package.json
@@ -43,7 +43,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@i3m/wallet-protocol": "^1.1.6",
+    "@i3m/wallet-protocol": "1.1.7",
     "rollup-plugin-import-css": "^3.0.3",
     "rxjs": "^7.5.5"
   }
