--- a/packages/server-wallet/package.json
+++ b/packages/server-wallet/package.json
@@ -8,11 +8,13 @@
   },
   "types": "./types/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json ",
     "lint": "ts-standard --fix",
     "postbuild": "npm run lint",
     "prepublishOnly": "npm run build",
-    "test": "echo \"Warning: You must specify tests for this package\""
+    "buidl:watch": "tsc -w --preserveWatchOutput --project tsconfig.build.json ",
+    "test": "jest --config=jest.config.js --coverage=false",
+    "test:watch": "jest --config=jest.config.js --coverage=false --watch"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,11 @@
     ]
   },
   "devDependencies": {
+    "@types/debug": "^4.1.7",
+    "@types/jest": "^29.1.1",
+    "debug": "^4.3.4",
+    "jest": "^29.1.2",
+    "ts-jest": "^29.0.3",
     "ts-standard": "^12.0.0",
     "typescript": "~4.7.4"
   },
