--- a/packages/base-wallet/package.json
+++ b/packages/base-wallet/package.json
@@ -57,10 +57,12 @@
     "@veramo/key-manager": "^1.2.0",
     "@veramo/message-handler": "^1.2.0",
     "@veramo/selective-disclosure": "^1.2.0",
+    "did-jwt": "^6.8.0",
     "did-resolver": "^3.1.0",
     "ethers": "^5.1.4",
     "ethr-did-resolver": "^4.3.3",
     "lodash": "^4.17.21",
+    "object-sha": "^2.0.7",
     "uuid": "^8.3.2",
     "web-did-resolver": "^2.0.4"
   }
