updated openapi. server-wallet ready for publication

--- a/packages/wallet-desktop-openapi/src/paths/identities.yaml
+++ b/packages/wallet-desktop-openapi/src/paths/identities.yaml
@@ -200,6 +200,10 @@ components:
               pattern: ^[A-Za-z0-9_-]+$
           required:
             - payload
+      required:
+        - type
+        - data
+
 
     SignTransaction:
       title: SignTransaction
@@ -211,6 +215,9 @@ components:
             - Transaction
         data:
           $ref: '#/components/schemas/Transaction'
+      required:
+        - type
+        - data
     
     SignJWT:
       title: SignJWT
@@ -233,6 +240,9 @@ components:
               additionalProperties: true
           required:
             - payload
+      required:
+        - type
+        - data
 
     Transaction:
       title: Transaction
